--- a/kinalapp/src/main/resources/application.properties
+++ b/kinalapp/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=KinalRestApplication
+
+#Conexion MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/dbFacturas_Cafeteria_in5av?createDatabaseIfNotExist=true
+spring.datasource.username=IN5AV
+spring.datasource.password=!+admin5av
+server.port=8001
+
+#JPA / hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
