--- a/kinalapp/src/main/resources/application.properties
+++ b/kinalapp/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=KinalRestApplication
+spring.application.name=KinalApp
 
 #Conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/dbClientes_in5av?createDataBaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dbClientes_in5av?createDatabaseIfNotExist=true
 spring.datasource.username=IN5AV
-spring.datasource.password=!+admin5av
-//server.port=8001
+spring.datasource.password=Denis.Tuquer-318
+server.port=8001
 
 #JPA / hibernate
 spring.jpa.hibernate.ddl-auto=update
