--- a/kinalapp/src/main/resources/application.properties
+++ b/kinalapp/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=KinalRestApplication
 
 #Conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/dbFacturas_Cafeteria_in5av?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dbFacturas_Cafeteria?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dbFacturas_Cafeteria_in5av?createDatabaseIfNotExist=true
 spring.datasource.username=IN5AV
 spring.datasource.password=!+admin5av
 server.port=8001
