--- a/TODO_UNIDO/kinalapp/src/main/resources/application.properties
+++ b/TODO_UNIDO/kinalapp/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=KinalRestApplication
 
 #Conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dbCafeteria_Kinal_in5av?createDatabaseIfNotExist=true
 spring.datasource.username=IN5AV
 spring.datasource.password=!+admin5av
 server.port=8001
